/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -204,7 +204,7 @@ General case
 
 Concepts used:
 
-- Fubini or Tonelli?
+- Tonelli
 
 - Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) \geq y}.$$
 - Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat f(x)\geq t}$$ is precisely what appears in the RHS integrand.
@@ -212,4 +212,5 @@ Concepts used:
 \begin{align*}
 m(E) = \int_{\RR^b} m(E^y) \,dy
 .\end{align*}
+  - Set $f = \chi_E$.
 - Claim: for $E$ defined above, $m(E) = \int f$.
