--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -216,4 +216,8 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 
 - Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) \geq y}.$$
 - Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat f(x)\geq t}$$ is precisely what appears in the RHS integrand.
+- By the claim,
+\begin{align*}
+m(E) = \int_\RR m(E^t) \,dt \definedas 
+.\end{align*}
 - Claim: for $E$ defined above, $m(E) = \int f$.
