/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ + ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -218,6 +218,8 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 - Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat f(x)\geq t}$$ is precisely what appears in the RHS integrand.
 - By the claim,
 \begin{align*}
-m(E) = \int_\RR m(E^t) \,dt \definedas \int_{-\infty}^\infty m\qty{\theset{ x\suchthat f(x) \geq t}} = \int_0^\infty m\qty{\theset{x\suchthat f(x) \geq t}} \quad\text{since } f\geq 0
+m(E) &= \int_\RR m(E^t) \,dt \\
+&\definedas \int_{-\infty}^\infty m\qty{\theset{ x\suchthat f(x) \geq t}}\,dt \\
+&= \int_0^\infty m\qty{\theset{x\suchthat f(x) \geq t}}\,dt \quad\text{since } f\geq 0
 .\end{align*}
 - Claim: for $E$ defined above, $m(E) = \int f$.
