/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -214,7 +214,7 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 
 **Solution**
 
-- Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) \geq y}.$$
+- Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) \geq t}.$$
 - Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat f(x)\geq t}$$ is precisely what appears in the RHS integrand.
 - By the claim,
 \begin{align*}
@@ -223,3 +223,4 @@ m(E) &= \int_\RR m(E^t) \,dt \\
 &= \int_0^\infty m\qty{\theset{x\suchthat f(x) \geq t}}\,dt \quad\text{since } f\geq 0
 .\end{align*}
 - Claim: for $E$ defined above, $m(E) = \int f$.
+  - This follows from the fact that since $f\geq 0$, we can write $E = \theset{(x, t) \in \RR^n \cross \RR \suchthat 0\leq t \leq f(x)}$.
