--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -217,10 +217,5 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 - Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) > t}.$$
 - Note that we can rewrite $E = \theset{(x, t) \in \RR^n \cross \RR \suchthat 0 \leq t < f(x)}$ since $f\geq 0$.
 - Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat 0 \leq t < f(x)}$$ is precisely what appears in the RHS integrand.
-- By the claim,
-\begin{align*}
-m(E) &= \int_\RR m(E^t) \,dt \\
-&\definedas \int_{-\infty}^\infty m\qty{\theset{ x\suchthat f(x) \geq t}}\,dt \\
-&= \int_0^\infty m\qty{\theset{x\suchthat f(x) \geq t}}\,dt \quad\text{since } f\geq 0
-.\end{align*}
+- Since $f$ is measurable, $E$ is measurable.
 - Claim: for $E$ defined above, $m(E) = \int f$.
