/ ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -219,3 +219,9 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 - Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat 0 \leq t < f(x)}$$ is precisely what appears in the RHS integrand.
 - Since $f$ is measurable, $E$ is measurable.
 - Claim: for $E$ defined above, $m(E) = \int f$.
+\begin{align*}
+m(E) 
+&= \int_{\RR^{n+1}} \chi_E(x, t) \,dx \,dt \\
+&= \int_{\RR^n} \int_\RR \chi_E(x, t) \,dx \,dt \\
+&= \int_\RR \int_\RR_n \chi_E(x, t) \,dx \,dt \\
+.\end{align*}
