/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -216,12 +216,19 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 
 - Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) > t}.$$
 - Note that we can rewrite $E = \theset{(x, t) \in \RR^n \cross \RR \suchthat 0 \leq t < f(x)}$ since $f\geq 0$.
-- Note that the slice $$E^t \definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat 0 \leq t < f(x)}$$ is precisely what appears in the RHS integrand.
+- Note that we have slices 
+\begin{align*}
+E^t &\definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat 0 \leq t < f(x)} \\
+E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suchthat 0 \leq t \leq f(x)} = [0, f(x)] \\
+.\end{align*}
+  - Note that the RHS of the first is precisely what appears in the original RHS integrand.o
+  - Note that $E^x = [0, f(x)] \subset \RR$ and thus $m(E^x) = f(x)$.
 - Since $f$ is measurable, $E$ is measurable.
 - Claim: for $E$ defined above, $m(E) = \int f$.
 \begin{align*}
 m(E) 
 &= \int_{\RR^{n+1}} \chi_E(x, t) \,dx \,dt \\
 &= \int_{\RR^n} \int_\RR \chi_E(x, t) \,dx \,dt \\
-&= \int_\RR \int_\RR_n \chi_E(x, t) \,dx \,dt \\
+&= \int_\RR \int_{\RR^n} \chi_E(x, t) \,dx \,dt \\
+&= \int_\RR m(E^t) \,dt
 .\end{align*}
