/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -230,6 +230,6 @@ m(E)
 &= \int_{\RR^{n+1}} \chi_E(x, t) \,dx \,dt \\
 &= \int_{\RR^n} \int_\RR \chi_E(x, t) \,dx \,dt \\
 &= \int_\RR \int_{\RR^n} \chi_E(x, t) \,dx \,dt \\
-&= \int_\RR m(E^t) \,dt
-&= 
+&= \int_{\RR^n} m(E^x) \,dx \\
+&= \int_{\RR^n} f(x) \,dx 
 .\end{align*}
