--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -223,7 +223,7 @@ E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suc
 .\end{align*}
   - Note that the RHS of the first is precisely what appears in the original RHS integrand.o
   - Note that $E^x = [0, f(x)] \subset \RR$ and thus $m(E^x) = f(x)$.
-- Since $f$ is measurable, $E$ is measurable.
+- Since $f$ is measurable, $E$ is measurable and $m(E)$ makes sense.
 - Claim: for $E$ defined above, $m(E) = \int f$.
 \begin{align*}
 m(E) 
