/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -223,13 +223,18 @@ E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suc
 .\end{align*}
   - Note that the RHS of the first is precisely what appears in the original RHS integrand.o
   - Note that $E^x = [0, f(x)] \subset \RR$ and thus $m(E^x) = f(x)$.
-- Since $f$ is measurable, $E$ is measurable and $m(E)$ makes sense.
+- Since $f$ is measurable, $E$ is measurable and thus $m(E)$ makes sense.
 - Claim: for $E$ defined above, $m(E) = \int f$.
 \begin{align*}
 m(E) 
-&= \int_{\RR^{n+1}} \chi_E(x, t) \,dx \,dt \\
-&= \int_{\RR^n} \int_\RR \chi_E(x, t) \,dx \,dt \\
-&= \int_\RR \int_{\RR^n} \chi_E(x, t) \,dx \,dt \\
+&= \int_{\RR^{n+1}} \chi_E(x, t) \\
+&= \int_{\RR^n} \int_\RR \chi_E(x, t) \,dx \,dt \quad{by Tonelli}\\
 &= \int_{\RR^n} m(E^x) \,dx \\
 &= \int_{\RR^n} f(x) \,dx 
+.\end{align*}
+- On the other hand,
+\begin{align*}
+m(E) 
+&= \int_{\RR^{n+1}} \chi_E(x, t) \,dx \,dt \\
+&= \int_\RR \int_{\RR^n} \chi_E(x, t) \, dx \,dt
 .\end{align*}
