/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -215,26 +215,33 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 **Solution**
 
 - Set $$E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) > t}.$$
-- Note that we can rewrite $E = \theset{(x, t) \in \RR^n \cross \RR \suchthat 0 \leq t < f(x)}$ since $f\geq 0$.
-- Note that we have slices 
+- We can rewrite $E = \theset{(x, t) \in \RR^n \cross \RR \suchthat 0 \leq t < f(x)}$ since $f\geq 0$.
+- We have slices 
 \begin{align*}
 E^t &\definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat 0 \leq t < f(x)} \\
-E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suchthat 0 \leq t \leq f(x)} = [0, f(x)] \\
+E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suchthat 0 \leq t \leq f(x)} = [0, f(x)]
 .\end{align*}
-  - Note that the RHS of the first is precisely what appears in the original RHS integrand.o
+  - Note that $E_t$ precisely the set that appears in the original RHS integrand.
   - Note that $E^x = [0, f(x)] \subset \RR$ and thus $m(E^x) = f(x)$.
-- Since $f$ is measurable, $E$ is measurable and thus $m(E)$ makes sense.
-- Claim: for $E$ defined above, $m(E) = \int f$.
+- Claim: since $f$ is measurable, $E$ is measurable and thus $m(E)$ makes sense.
+- Claim: $\chi_E$ satisfies the conditions of Tonelli, and thus $m(E) = \int \chi_E$ is equal to any iterated integral.
+- On one hand, 
 \begin{align*}
 m(E) 
 &= \int_{\RR^{n+1}} \chi_E(x, t) \\
-&= \int_{\RR^n} \int_\RR \chi_E(x, t) \,dx \,dt \quad{by Tonelli}\\
+&= \int_{\RR} \int_{\RR^n} \chi_E(x, t) \,dt \,dx \quad\text{by Tonelli}\\
 &= \int_{\RR^n} m(E^x) \,dx \\
 &= \int_{\RR^n} f(x) \,dx 
 .\end{align*}
 - On the other hand,
 \begin{align*}
 m(E) 
-&= \int_{\RR^{n+1}} \chi_E(x, t) \,dx \,dt \\
-&= \int_\RR \int_{\RR^n} \chi_E(x, t) \, dx \,dt
+&= \int_{\RR^{n+1}} \chi_E(x, t) \\
+&= \int_\RR \int_{\RR^n} \chi_E(x, t) \, dx \,dt \quad\text{Tonelli} \\
+&= \int_\RR m(E^t) \,dt
+.\end{align*}
+
+- Thus
+\begin{align*}
+\int_{\RR^n} f \,dx = m(E) = \int_\RR m(E^t) \,dt = \int_\RR m\qty{\theset{x\suchthat f(x) > t}}
 .\end{align*}
