/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -224,7 +224,11 @@ E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suc
   - Note that $E_t$ precisely the set that appears in the original RHS integrand.
   - Note that $E^x = [0, f(x)] \subset \RR$ and thus $m(E^x) = f(x)$.
 - Claim: since $f$ is measurable, $E$ is measurable and thus $m(E)$ makes sense.
+  - Since $f$ is measurable, $F(x, t) \definedas t - f(x)$ is measurable on $\RR^n \cross \RR$.
+  - Then write $E = \theset{F < 0}$.
 - Claim: $\chi_E$ satisfies the conditions of Tonelli, and thus $m(E) = \int \chi_E$ is equal to any iterated integral.
+  - Non-negative: clear since $0\leq \chi_E \leq 1$
+  - Measurable: characteristic functions of measurable sets are measurable.
 - On one hand, 
 \begin{align*}
 m(E) 
