+ ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -232,6 +232,8 @@ E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suc
 - Claim: $\chi_E$ satisfies the conditions of Tonelli, and thus $m(E) = \int \chi_E$ is equal to any iterated integral.
   - Non-negative: clear since $0\leq \chi_E \leq 1$
   - Measurable: characteristic functions of measurable sets are measurable.
+
+- Claim: If $E$ is measurable, then for almost every $t$, $E^t$ is a measurable set, $t\mapsto m(E^t)$ is a measurable function, and $m(E) = \int_\RR m(E^t) \, dt$.
 - On one hand, 
 \begin{align*}
 m(E) 
