--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -233,7 +233,7 @@ E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suc
   - Non-negative: clear since $0\leq \chi_E \leq 1$
   - Measurable: characteristic functions of measurable sets are measurable.
 
-- Claim: If $E$ is measurable, then for almost every $t$, $E^t$ is a measurable set, $t\mapsto m(E^t)$ is a measurable function, and $m(E) = \int_\RR m(E^t) \, dt$.
+- Claim: If $E$ is measurable, then for almost every $y$, $E^y$ is a measurable set, $y\mapsto m(E^y)$ is a measurable function, and $m(E) = \int_\RR m(E^y) \, dy$.
 - On one hand, 
 \begin{align*}
 m(E) 
