/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -233,21 +233,23 @@ E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suc
   - Non-negative: clear since $0\leq \chi_E \leq 1$
   - Measurable: characteristic functions of measurable sets are measurable.
 
-- Claim: If $E$ is measurable on a product space $\RR^a \cross \RR^b \ni (x, y)$, then for almost every $y$, $E^y$ is a measurable set, $y\mapsto m(E^y)$ is a measurable function, and $m(E) = \int_\RR m(E^y) \, dy$.
-- On one hand, 
+- Conclude:
+  1. For almost every $x$, $E^x$ is a measurable set, $x\mapsto m(E^x)$ is a measurable function, and $m(E) = \int_{\RR^n} m(E^x) \, dx$ 
+  2. For almost every $t$, $E^t$ is a measurable set, $t\mapsto m(E^t)$ is a measurable function, and $m(E) = \int_{\RR} m(E^t) \, dt$ 
+- On one hand,
 \begin{align*}
 m(E) 
 &= \int_{\RR^{n+1}} \chi_E(x, t) \\
 &= \int_{\RR} \int_{\RR^n} \chi_E(x, t) \,dt \,dx \quad\text{by Tonelli}\\
-&= \int_{\RR^n} m(E^x) \,dx \\
+&= \int_{\RR^n} m(E^x) \,dx \quad\text{first conclusion}\\
 &= \int_{\RR^n} f(x) \,dx 
 .\end{align*}
 - On the other hand,
 \begin{align*}
 m(E) 
 &= \int_{\RR^{n+1}} \chi_E(x, t) \\
-&= \int_\RR \int_{\RR^n} \chi_E(x, t) \, dx \,dt \quad\text{Tonelli} \\
-&= \int_\RR m(E^t) \,dt
+&= \int_\RR \int_{\RR^n} \chi_E(x, t) \, dx \,dt \quad\text{by Tonelli} \\
+&= \int_\RR m(E^t) \,dt \quad\text{second conclusion}
 .\end{align*}
 
 - Thus
