--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -214,21 +214,23 @@ m(E) = \int_{\RR^b} m(E^y) \,dy
 
 **Solution**
 
+> Note: $f$ is a function $\RR\to \RR$ in the original problem, but here I've assumed $f:\RR^n\to \RR$.
+
 - Since $f\geq 0$, set 
 $$
 E\definedas \theset{(x, t) \in \RR^{n} \cross \RR \suchthat f(x) > t}
 = \theset{(x, t) \in \RR^n \cross \RR \suchthat 0 \leq t < f(x)}
 .$$
+- Claim: since $f$ is measurable, $E$ is measurable and thus $m(E)$ makes sense.
+  - Since $f$ is measurable, $F(x, t) \definedas t - f(x)$ is measurable on $\RR^n \cross \RR$.
+  - Then write $E = \theset{F < 0} \intersect \theset{t\geq 0}$ as an intersection of measurable sets.
 - We have slices 
 \begin{align*}
 E^t &\definedas \theset{x\in \RR^n \suchthat (x, t) \in E} = \theset{x\in \RR^n \suchthat 0 \leq t < f(x)} \\
 E^x &\definedas \theset{t\in \RR \suchthat (x, t) \in E} = \theset{t\in \RR \suchthat 0 \leq t \leq f(x)} = [0, f(x)]
 .\end{align*}
-  - $E_t$ precisely the set that appears in the original RHS integrand.
+  - $E_t$ is precisely the set that appears in the original RHS integrand.
   - $m(E^x) = f(x)$.
-- Claim: since $f$ is measurable, $E$ is measurable and thus $m(E)$ makes sense.
-  - Since $f$ is measurable, $F(x, t) \definedas t - f(x)$ is measurable on $\RR^n \cross \RR$.
-  - Then write $E = \theset{F < 0} \intersect \theset{t\geq 0}$ as an intersection of measurable sets.
 - Claim: $\chi_E$ satisfies the conditions of Tonelli, and thus $m(E) = \int \chi_E$ is equal to any iterated integral.
   - Non-negative: clear since $0\leq \chi_E \leq 1$
   - Measurable: characteristic functions of measurable sets are measurable.
