/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/04_2018 Fall.md’

--- a/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
+++ b/Real Analysis/UGA Solutions/sections/04_2018 Fall.md
@@ -263,5 +263,11 @@ $\qed$
 
 ## 6
 
-- Note that $x^{1\over n} \converges{n\to\infty}\to 1$ for any $0 < x < 1$.
+- Note that $x^{1\over n} \converges{n\to\infty}\to 1$ for any $0 < x < \infty$.
 - Thus the integrand converges to ${1\over e^x}$, which is integrable on $(0, \infty)$ and integrates to 1.
+- Break the integrand up:
+\begin{align*}
+\int_0^\infty {1 \over  \qty{ 1 + {x\over n} }^n x^{1\over n}} \,dx
+= \int_0^1 {1 \over  \qty{ 1 + {x\over n} }^n x^{1\over n}} \,dx
+= \int_1^\infty {1 \over  \qty{ 1 + {x\over n} }^n x^{1\over n}} \,dx
+.\end{align*}
