/ ‘Algebra/UGA Questions/sections/16_2012 Fall.md’

--- a/Algebra/UGA Questions/sections/16_2012 Fall.md
+++ b/Algebra/UGA Questions/sections/16_2012 Fall.md
@@ -22,7 +22,7 @@ c. Determine how many groups of order 30 there are up to isomorphism.
 
 ## 3
 Let $f(x) \in \QQ[x]$ be an irreducible polynomial of degree 5.
-Assume that $f$ has all be two roots in $\RR$.
+Assume that $f$ has all but two roots in $\RR$.
 Compute the Galois group of $f(x)$ over $\QQ$ and justify your answer.
 
 
