/ ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.md’ / ‘Algebra/UGA Questions/UGA_Algebra_Qual_Questions.pdf’ / ‘Algebra/UGA Questions/sections/06_2017 Fall.md’

--- a/Algebra/UGA Questions/sections/06_2017 Fall.md
+++ b/Algebra/UGA Questions/sections/06_2017 Fall.md
@@ -23,7 +23,7 @@ For the rest of the problem, assume that $G$ is a non-abelian group of order 36.
 
 (b) Prove that if the 2-Sylow subgroup of $G$ is normal, $G$ has a normal subgroup $N$ such that $G/N$ is isomorphic to $A_4$.
 
-(c) Show that if $G$ has a normal subgroup $N$ such that $G/N$ is isomorphic to $A_4$ and a subgroup $H$ isomorphic to A_4$ it must be the direct product of $N$ and $H$.
+(c) Show that if $G$ has a normal subgroup $N$ such that $G/N$ is isomorphic to $A_4$ and a subgroup $H$ isomorphic to $A_4$ it must be the direct product of $N$ and $H$.
 
 (d) Show that the dihedral group of order 36 is a non-abelian group of order 36 whose Sylow-2 subgroup is not normal.
 
