--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -2,15 +2,14 @@
 
 ## 1
 
-We'll show that $m(E) \intersect [n, n+1] = 0$ for all $n\in \ZZ$; then the result will follow from that fact that 
-$$
-m(E) = m \qty{\union_{n\in \ZZ} E \intersect [n, n+1]} \leq \sum m(E \intersect [n, n+1]) = 0
-$$
+- We'll show that $m(E) \intersect [n, n+1] = 0$ for all $n\in \ZZ$; then the result will follow from that fact that 
+\begin{align*}
+m(E) = m \qty{\union_{n\in \ZZ} E \intersect [n, n+1]} \leq \sum_{n=1}^\infty m(E \intersect [n, n+1]) = 0
+.\end{align*}
 
-By translation invariance of measure, it suffices to show $m(E \intersect [0, 1]) = 0$.
+- By translation invariance of measure, it suffices to show $m(E \intersect [0, 1]) = 0$.
 
 Define
-
 \begin{align*}
 E_j \definedas \theset{x\in [0, 1] \suchthat \
 \exists p\in \ZZ^{\geq 0} \text{ s.t. } \abs{x - \frac{p}{j} } < \frac 1 {j^3}} 
