/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -9,13 +9,13 @@ m(E) = m \qty{\union_{n\in \ZZ} E \intersect [n, n+1]} \leq \sum_{n=1}^\infty m(
 
 - By translation invariance of measure, it suffices to show $m(E \intersect [0, 1]) = 0$.
 
-Define
+- Define
 \begin{align*}
 E_j \definedas \theset{x\in [0, 1] \suchthat \
 \exists p\in \ZZ^{\geq 0} \text{ s.t. } \abs{x - \frac{p}{j} } < \frac 1 {j^3}} 
 .\end{align*}
 
-Note that we can write $E_j$ is a union of intervals
+- Write $E_j$ is a union of intervals
 \begin{align*}
 E_j =& (1, {1 \over j^3}) \\
 &\disjoint B_{1 \over j^3}\qty{1\over j} \disjoint
