--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -2,7 +2,7 @@
 
 ## 1
 
-- We'll show that $m(E) \intersect [n, n+1] = 0$ for all $n\in \ZZ$; then the result will follow from that fact that 
+- We'll show that $m(E) \intersect [n, n+1] = 0$ for all $n\in \ZZ$; then the result follows from 
 \begin{align*}
 m(E) = m \qty{\union_{n\in \ZZ} E \intersect [n, n+1]} \leq \sum_{n=1}^\infty m(E \intersect [n, n+1]) = 0
 .\end{align*}
