/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -15,7 +15,7 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
 \exists p\in \ZZ^{\geq 0} \text{ s.t. } \abs{x - \frac{p}{j} } < \frac 1 {j^3}} 
 .\end{align*}
 
-- Write $E_j$ is a union of intervals
+- Write $E_j$ as a union of intervals
 \begin{align*}
 E_j =& (1, {1 \over j^3}) \\
 &\disjoint B_{1 \over j^3}\qty{1\over j} \disjoint
