/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -17,7 +17,7 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
 
 - Write $E_j$ as a union of intervals
 \begin{align*}
-E_j =& (1, {1 \over j^3}) \\
+E_j =& \qty{1, {1 \over j^3}} \\
 &\disjoint B_{1 \over j^3}\qty{1\over j} \disjoint
 B_{1 \over j^3}\qty{2\over j} \disjoint
 \cdots \disjoint
