/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -15,13 +15,15 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
 \exists p\in \ZZ^{\geq 0} \text{ s.t. } \abs{x - \frac{p}{j} } < \frac 1 {j^3}} 
 .\end{align*}
 
-- Write $E_j$ as a union of intervals
+  - Note that $E_j \subseteq \disjoint_{p\in \ZZ^{\geq 0}} B_{j^{-3}}\qty{p\over j}$, i.e. a union over integers $p$ of intervals of radius $1/j^3$ around the points $p/j$.
+    Since $1/j^3 < 1/j$, this union is in fact disjoint.
+- Intersecting with $[0, 1]$, we can write $E_j$ as a union of intervals:
 \begin{align*}
-E_j =& \qty{1, {1 \over j^3}} \\
+E_j =& \qty{1, {1 \over j^3}} \quad
 &\disjoint B_{1 \over j^3}\qty{1\over j} \disjoint
 B_{1 \over j^3}\qty{2\over j} \disjoint
 \cdots \disjoint
-B_{1 \over j^3}\qty{j-1\over j} \\
+B_{1 \over j^3}\qty{j-1\over j} \quad
 &\disjoint (1 - {1\over j^3}, 1)
 ,\end{align*}
 
