--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -19,12 +19,14 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
     Since $1/j^3 < 1/j$, this union is in fact disjoint.
 - Intersecting with $[0, 1]$, we can write $E_j$ as a union of intervals:
 \begin{align*}
-E_j =& \qty{1, {1 \over j^3}} \quad
-&\disjoint B_{1 \over j^3}\qty{1\over j} \disjoint
+E_j =& \qty{1, {1 \over j^3}} 
+\quad \disjoint \quad 
+B_{1 \over j^3}\qty{1\over j} \disjoint
 B_{1 \over j^3}\qty{2\over j} \disjoint
 \cdots \disjoint
-B_{1 \over j^3}\qty{j-1\over j} \quad
-&\disjoint (1 - {1\over j^3}, 1)
+B_{1 \over j^3}\qty{j-1\over j} 
+\quad \disjoint \quad 
+(1 - {1\over j^3}, 1)
 ,\end{align*}
 
 from which we can conclude that $E_j$ is Borel and thus Lebesgue measurable, and that for each $j$, there are exactly $j+1$ possible choices for a numerator (corresponding to the $j+1$ sets appearing above.)
