/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -28,6 +28,7 @@ B_{1 \over j^3}\qty{j-1\over j}
 \quad \disjoint \quad 
 (1 - {1\over j^3}, 1)
 ,\end{align*}
+  where we've separated out the "boundary" terms to emphasize that they are balls about $0$ and $1$ intersected with $[0, 1]$.
 
 from which we can conclude that $E_j$ is Borel and thus Lebesgue measurable, and that for each $j$, there are exactly $j+1$ possible choices for a numerator (corresponding to the $j+1$ sets appearing above.)
 
