--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -19,14 +19,14 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
     Since $1/j^3 < 1/j$, this union is in fact disjoint.
 - Intersecting with $[0, 1]$, we can write $E_j$ as a union of intervals:
 \begin{align*}
-E_j =& \qty{0, {1 \over j^3}} 
+E_j =& \qty{0, {j^{-3}}} 
 \quad \disjoint \quad 
-B_{1 \over j^3}\qty{1\over j} \disjoint
-B_{1 \over j^3}\qty{2\over j} \disjoint
+B_{j^{-3}}\qty{1\over j} \disjoint
+B_{j^{-3}}\qty{2\over j} \disjoint
 \cdots \disjoint
-B_{1 \over j^3}\qty{j-1\over j} 
+B_{j^{-3}}\qty{j-1\over j} 
 \quad \disjoint \quad 
-(1 - {1\over j^3}, 1)
+(1 - {j^{-3}}, 1)
 ,\end{align*}
   where we've separated out the "boundary" terms to emphasize that they are balls about $0$ and $1$ intersected with $[0, 1]$.
 
