/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -30,7 +30,9 @@ B_{j^{-3}}\qty{j-1\over j}
 ,\end{align*}
   where we've separated out the "boundary" terms to emphasize that they are balls about $0$ and $1$ intersected with $[0, 1]$.
 
-from which we can conclude that $E_j$ is Borel and thus Lebesgue measurable, and that for each $j$, there are exactly $j+1$ possible choices for a numerator (corresponding to the $j+1$ sets appearing above.)
+- Since $E_j$ is a union of open sets, it is Borel and thus Lebesgue measurable.
+
+- For each $j$, there are exactly $j+1$ possible choices for a numerator (corresponding to the $j+1$ sets appearing above.)
 
 The first and last intervals are length $1 \over j^3$ and the remaining $(j+1)-2 = j-1$ intervals are length $2 \over j^3$, so we find that
 $$
