--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -2,10 +2,18 @@
 
 ## 1
 
+Concepts used:
+
+- Borel-Cantelli
+
+**Solution**:
+
 - We'll show that $m(E) \intersect [n, n+1] = 0$ for all $n\in \ZZ$; then the result follows from 
 \begin{align*}
 m(E) = m \qty{\union_{n\in \ZZ} E \intersect [n, n+1]} \leq \sum_{n=1}^\infty m(E \intersect [n, n+1]) = 0
 .\end{align*}
+
+- Strategy: Borel-Cantelli.
 
 - By translation invariance of measure, it suffices to show $m(E \intersect [0, 1]) = 0$.
 
@@ -30,23 +38,28 @@ B_{j^{-3}}\qty{j-1\over j}
 ,\end{align*}
   where we've separated out the "boundary" terms to emphasize that they are balls about $0$ and $1$ intersected with $[0, 1]$.
 
+
 - Since $E_j$ is a union of open sets, it is Borel and thus Lebesgue measurable.
 
-- For each $j$, there are exactly $j+1$ possible choices for a numerator (corresponding to the $j+1$ sets appearing above.)
+- Bounding the measure of $E_j$:
 
-The first and last intervals are length $1 \over j^3$ and the remaining $(j+1)-2 = j-1$ intervals are length $2 \over j^3$, so we find that
-$$
-m(E_j) = 2 \qty{1 \over j^3} + (j-1) \qty{2 \over j^3} = {2 \over j^2}
-$$
+  - For a fixed $j$, there are exactly $j+1$ possible choices for a numerator ($0, 1, \cdots, j$), thus there are exactly $j+1$ sets appearing in the above decomposition.
 
-We can then note that
+  - The first and last intervals are length $1 \over j^3$ 
+  - The remaining $(j+1)-2 = j-1$ intervals are twice this length, $2 \over j^3$
+  - Thus
+  $$
+  m(E_j) = 2 \qty{1 \over j^3} + (j-1) \qty{2 \over j^3} = {2 \over j^2}
+  $$
+
+- Note that 
 \begin{align*}
 \sum_{j\in \NN} m(E_j) \leq 2\sum_{j\in \NN} \frac 1 {j^2} < \infty
 ,\end{align*}
 
 which converges by the $p\dash$test for sums.
 
-Since $\theset{E_j}$ is a countable collection of measurable sets such that $\sum m(E_j) < \infty$, Borel-Cantelli applies and $m(\limsup_j E_j) = 0$, where we can just note that $\limsup_j E_j = E \intersect [0, 1]$.
+- Since $\theset{E_j}$ is a countable collection of measurable sets such that $\sum m(E_j) < \infty$, Borel-Cantelli applies and $m(\limsup_j E_j) = 0$, where we can just note that $\limsup_j E_j = E \intersect [0, 1]$.
 
 $\qed$
 
