--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -5,18 +5,19 @@
 Concepts used:
 
 - Borel-Cantelli: If $\theset{E_k}_{k\in\ZZ}\subset 2^\RR$ is a countable collection of Lebesgue measurable sets with $\sum_{k\in \ZZ} m(E_k) < \infty$, then almost every $x\in \RR$ is in *at most finitely* many $E_k$.
-  - Alternatively
+  - Equivalently (?), $m(\limsup_{k\to\infty} E_k) = 0$, where $\limsup_{k\to\infty} E_k = \intersect_{k=1}^\infty \union_{j\geq k} E_j$.
 
 **Solution**:
+
+- Strategy: Borel-Cantelli.
 
 - We'll show that $m(E) \intersect [n, n+1] = 0$ for all $n\in \ZZ$; then the result follows from 
 \begin{align*}
 m(E) = m \qty{\union_{n\in \ZZ} E \intersect [n, n+1]} \leq \sum_{n=1}^\infty m(E \intersect [n, n+1]) = 0
 .\end{align*}
 
-- Strategy: Borel-Cantelli.
-
 - By translation invariance of measure, it suffices to show $m(E \intersect [0, 1]) = 0$.
+  - So WLOG, replace $E$ with $E\intersect [0, 1]$.
 
 - Define
 \begin{align*}
@@ -26,6 +27,12 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
 
   - Note that $E_j \subseteq \disjoint_{p\in \ZZ^{\geq 0}} B_{j^{-3}}\qty{p\over j}$, i.e. a union over integers $p$ of intervals of radius $1/j^3$ around the points $p/j$.
     Since $1/j^3 < 1/j$, this union is in fact disjoint.
+
+  - Importantly, note that 
+  \begin{align*}
+  \limsup_{j\to\infty} E_j = E
+  .\end{align*}
+
 - Intersecting with $[0, 1]$, we can write $E_j$ as a union of intervals:
 \begin{align*}
 E_j =& \qty{0, {j^{-3}}} 
