/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -32,7 +32,7 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
 \begin{align*}
 \limsup_{j\to\infty} E_j = E
 \end{align*}
-  since an element is in the LHS iff 
+  since an element $x$ is in the LHS $\iff x \in E_j$ for infinitely many $j \iff$ there are infinitely many $j$ for which there exist a $p$ such that $\abs{x - {p\over j}} < j^{-3} \iff$ there are infinitely many such pairs $p, j$ $\iff x\in E$.
 
 - Intersecting with $[0, 1]$, we can write $E_j$ as a union of intervals:
 \begin{align*}
