/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’ + ‘Real Analysis/UGA Solutions/sections/.temp.pandoc-include’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -29,10 +29,19 @@ E_j \definedas \theset{x\in [0, 1] \suchthat \
     Since $1/j^3 < 1/j$, this union is in fact disjoint.
 
 - Importantly, note that 
-\begin{align*}
-\limsup_{j\to\infty} E_j = E
-\end{align*}
-  since an element $x$ is in the LHS $\iff x \in E_j$ for infinitely many $j \iff$ there are infinitely many $j$ for which there exist a $p$ such that $\abs{x - {p\over j}} < j^{-3} \iff$ there are infinitely many such pairs $p, j$ $\iff x\in E$.
+  \begin{align*}
+  \limsup_{j\to\infty} E_j = E
+  \end{align*}
+  
+  since 
+  
+  \begin{align*}
+  x \in \limsup_j E_j 
+  &\iff x \in E_j \text{for infinitely many} j 
+  &\iff \text{ there are infinitely many $j$ for which there exist a $p$ such that } \abs{x - {p\over j}} < j^{-3} 
+  &\iff \text{ there are infinitely many such pairs $p, j$} 
+  &\iff x\in E
+  .\end{align*}
 
 - Intersecting with $[0, 1]$, we can write $E_j$ as a union of intervals:
 \begin{align*}
@@ -50,7 +59,7 @@ B_{j^{-3}}\qty{j-1\over j}
 
 - Since $E_j$ is a union of open sets, it is Borel and thus Lebesgue measurable.
 
-- Bounding the measure of $E_j$:
+- Computing the measure of $E_j$:
 
   - For a fixed $j$, there are exactly $j+1$ possible choices for a numerator ($0, 1, \cdots, j$), thus there are exactly $j+1$ sets appearing in the above decomposition.
 
