/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -72,12 +72,11 @@ B_{j^{-3}}\qty{j-1\over j}
 
 - Note that 
 \begin{align*}
-\sum_{j\in \NN} m(E_j) \leq 2\sum_{j\in \NN} \frac 1 {j^2} < \infty
+\sum_{j\in \NN} m(E_j) =  2\sum_{j\in \NN} \frac 1 {j^2} < \infty
 ,\end{align*}
+  which converges by the $p\dash$test for sums.
 
-which converges by the $p\dash$test for sums.
-
-- Since $\theset{E_j}$ is a countable collection of measurable sets such that $\sum m(E_j) < \infty$, Borel-Cantelli applies and $m(\limsup_j E_j) = 0$, where we can just note that $\limsup_j E_j = E \intersect [0, 1]$.
+- Since $\theset{E_j}$ is a countable collection of measurable sets such that $\sum m(E_j) < \infty$, Borel-Cantelli applies and $m(\limsup_j E_j) = 0$ (and $E = \limsup_j E_j$).
 
 $\qed$
 
