/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -85,7 +85,7 @@ $\qed$
 
 ### a
 
-Since $x < 1 \implies x^n \to 0$ and $x>1 \implies x^n \to \infty$, we have
+Since $x < 1 \implies x^n \converges{n\to\infty}\to 0$ and $x>1 \implies x^n \converges{n\to\infty}\to \infty$, we have
 \begin{align*}
 f_n(x) = \frac{x}{1+ x^n}\converges{n\to\infty}\longrightarrow
 f(x) = \begin{cases}
