--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -85,21 +85,27 @@ $\qed$
 
 ### a
 
-Since $x < 1 \implies x^n \converges{n\to\infty}\to 0$ and $x>1 \implies x^n \converges{n\to\infty}\to \infty$, we have
+- Note each $f_n(x)$ is clearly continuous on $(0, \infty)$, since it is a quotient of continuous functions where the denominator is never zero.
+
+- Note 
+\begin{align*}
+x < 1 \implies x^n \converges{n\to\infty}\to 0\qtext{and} x>1 \implies x^n \converges{n\to\infty}\to \infty
+.\end{align*}
+
+- Thus
 \begin{align*}
 f_n(x) = \frac{x}{1+ x^n}\converges{n\to\infty}\longrightarrow
 f(x) = \begin{cases}
-0, & x = 0 \\
-x, & x < 1 \\
+x, & 0 \leq x < 1 \\
 \frac 1 2, & x = 1 \\
-0, & x > 0 \\
+0, & x > 1 \\
 \end{cases}
 .\end{align*}
 
-If $f_n \to f$ uniformly on $[0, \infty)$, it would converge uniformly on every subset.
+- If $f_n \to f$ uniformly on $[0, \infty)$, it would converge uniformly on every subset and thus uniformly on $(0, 1)$.
+- Then $f$ would be a uniform limit of continuous functions and thus continuous, 
+- By uniqueness of limits, $f_n$ would converge to the pointwise limit above, which is not continuous at $x=1$.
 
-Butach $f_n(x)$ is clearly continuous on $(0, \infty)$, and if the convergence was uniform then $f$ would be continuous. 
-However $f$ has a clear discontinuity at $x=1$.
 
 ### b
 
