/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -85,6 +85,8 @@ $\qed$
 
 ### a
 
+Claim: $f_n$ does not converge uniformly to its limit.
+
 - Note each $f_n(x)$ is clearly continuous on $(0, \infty)$, since it is a quotient of continuous functions where the denominator is never zero.
 
 - Note 
@@ -95,7 +97,8 @@ x < 1 \implies x^n \converges{n\to\infty}\to 0\qtext{and} x>1 \implies x^n \conv
 - Thus
 \begin{align*}
 f_n(x) = \frac{x}{1+ x^n}\converges{n\to\infty}\longrightarrow
-f(x) = \begin{cases}
+f(x) \definedas
+\begin{cases}
 x, & 0 \leq x < 1 \\
 \frac 1 2, & x = 1 \\
 0, & x > 1 \\
@@ -105,7 +108,6 @@ x, & 0 \leq x < 1 \\
 - If $f_n \to f$ uniformly on $[0, \infty)$, it would converge uniformly on every subset and thus uniformly on $(0, 1)$.
 - Then $f$ would be a uniform limit of continuous functions and thus continuous, 
 - By uniqueness of limits, $f_n$ would converge to the pointwise limit above, which is not continuous at $x=1$.
-
 
 ### b
 
