/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -111,20 +111,28 @@ x, & 0 \leq x < 1 \\
 
 ### b
 
-If the DCT applies, we can interchange the limit and integral, and the value would be the area under the graph of $f$ which is $\int_0^1 x ~dx = \frac 1 2$.
+- If the DCT applies, interchange the limit and integral:
+    \begin{align*}
+    \lim_{n\to\infty }\int_0^\infty f_n(x)\, dx 
+    &= \int_0^\infty \lim_{n\to\infty}f_n(x) \, dx \\
+    &=\int_0^\infty f(x) \,dx \\
+    &= \int_0^1 x \,dx + \int_1^\infty 0\, dx \\
+    &= {1\over 2}x^2 \evalfrom_0^1 \\
+    &= {1\over 2}
+    .\end{align*}
 
-To justify the DCT, write 
+- To justify the DCT, write 
 \begin{align*}
 \int_0^\infty f_n(x)
 = \int_0^1 f_n(x) + \int_1^\infty f_n(x)
 .\end{align*}
 
-Then
+- Then
 \begin{align*}
 x \in [0, 1] \implies \frac{x}{1+x^n} < \frac{1}{1+x^n} < 1
 \end{align*}
 
-and $\int_0^1 1 ~dx = 1 < \infty$.
+- Note $\int_0^1 1 ~dx = 1 < \infty$.
 
 On the other hand,
 
