/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -127,12 +127,14 @@ x, & 0 \leq x < 1 \\
 = \int_0^1 f_n(x) + \int_1^\infty f_n(x)
 .\end{align*}
 
-- Then
-\begin{align*}
-x \in [0, 1] \implies \frac{x}{1+x^n} < \frac{1}{1+x^n} < 1
-\end{align*}
-
-- Note $\int_0^1 1 ~dx = 1 < \infty$.
+- $f_n$ is uniformly bounded by $g(x) = 1$ in the first integral, since
+  \begin{align*}
+  x \in [0, 1] \implies \frac{x}{1+x^n} < \frac{1}{1+x^n} < 1
+  \end{align*}
+  so 
+  \begin{align*}
+  \int_0^1 f_n(x)\,dx \leq \int_0^1 1 \,dx = 1 < \infty
+  .\end{align*}
 
 On the other hand,
 
