/ ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -129,7 +129,7 @@ x, & 0 \leq x < 1 \\
 
 - $f_n$ is uniformly bounded by $g(x) = 1$ in the first integral, since
   \begin{align*}
-  x \in [0, 1] \implies \frac{x}{1+x^n} < \frac{1}{1+x^n} < 1
+  x \in [0, 1] \implies \frac{x}{1+x^n} < \frac{1}{1+x^n} < 1 \definedas g(x)
   \end{align*}
   so 
   \begin{align*}
