/ ‘Real Analysis/UGA Solutions/Real_Analysis_Qual_Solutions.pdf’ / ‘Real Analysis/UGA Solutions/sections/05_2018 Spring.md’

--- a/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
+++ b/Real Analysis/UGA Solutions/sections/05_2018 Spring.md
@@ -136,13 +136,13 @@ x, & 0 \leq x < 1 \\
   \int_0^1 f_n(x)\,dx \leq \int_0^1 1 \,dx = 1 < \infty
   .\end{align*}
 
-On the other hand,
+- $f_n$ is uniformly bounded by $g(x) = {1\over x^{n-1}}$ on $[1, \infty)$, since
+  \begin{align*}
+  x \in (1, \infty) \implies \frac{x}{1+x^n} \approx O\left(\frac 1 {x^{n-1}}\right)
+  ,\end{align*}
 
-\begin{align*}
-x \in (1, \infty) \implies \frac{x}{1+x^n} \approx O\left(\frac 1 {x^{n-1}}\right)
-,\end{align*}
-
-and so for $n > 2$ the integral will converge by the $p\dash$test.
+  - Since for $n > 2$, $\int_1^\infty {1\over x^n} < \infty$ by the $p\dash$test, $g(x) \in L^1$ ??
+  \todo{Need to clean this up. What is the $g\in L^1((0, \infty))$ that does the job? Is the splitting justified? Show in detail why this second integral converges.}
 
 ## 3
 
